--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ version = "0.0.0"
 dependencies = [
     "numpy>=2.0.0",
     "plotly>=6.0.0",
-    "dash>=3.0.0"
+    "dash>=3.0.0",
+    "sympy>=1.0.0",
+    "numexpr>=2.0.0"
 ]
 
 [tool.setuptools]
