--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,12 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.10"
+    python: "3.11.4"
+
+python:
+  install:
+    - method: pip
+      path: .
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
